Fix header layout, update styling and margins Change display to flexbox, set font-family to Hero, and gap between links in the header

--- a/style.css
+++ b/style.css
@@ -1,20 +1,35 @@
+body {
+    display: flex;
+    flex-direction: column;
+    margin: 0px;
+    font-family: 'Hero Regular', sans-serif;
+}
+
 ul {
     list-style-type: none;
     display: flex;
+    margin: 0px;
+    padding: 10px;
+    gap: 10px;
 }
 
 .header {
     background-color: #1f2937;
     color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .title {
     font-size: 24px;
     font-weight: bold;
-
+    padding: 10px;
 }
-.header .right-links {
+
+.right-links .title {
     font-size: 18px;
+    display: flex;
 }
 
 .row-one, .footer {
